--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clsx": "^2.1.1",
     "jotai": "^2.8.1",
     "lucide-react": "^0.379.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
